# kb

./: .gitignore  Cargo.toml  keytaa  keytaa.service  notes.org
src/: machines.rs  main.rs
src/common/: mod.rs
src/machines/: big_machine.rs  dynamic_machine.rs  key_maps.rs  lead_machine.rs  machine.rs  mod.rs  mode_machine.rs  print_keys.rs  runner.rs  runner_test.rs  test.rs
src/null/: mod.rs
src/sink/: mod.rs
src/unix/: dev_info.rs  glob.rs  glob_test.rs  mod.rs  mode_machine.rs  test.rs  timer.rs
src/windows/: mod.rs
