[package]
name = "kb"
version = "0.1.0"
authors = ["Jason Holloway <miceeatnicerice@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
bitmaps = "2.1.0"
typenum = "1.11.2"
velcro = "0.5.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["minwindef","winuser","wincon"] }
windebug_logger = "0.1.4"

[target.'cfg(unix)'.dependencies]
evdev-rs = "0.4.0"
libc = "0.2.88"

[dev-dependencies]
spectral = "0.6.0"
totems = "0.2.7"
itertools = "0.10.0"